--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "cmath": "cpp",
-        "iostream": "cpp"
-    }
+        "iostream": "cpp",
+        "string.h": "c",
+        "unistd.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
