added fuctions to find pah

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "cmath": "cpp",
         "iostream": "cpp",
         "string.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "s_shell.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
